# StarHub

./: .gitignore  README.md  index.html  pyproject.toml  wrangler.toml
.github/workflows/: refresh-starred.yml
functions/api/: starred.js  update-starred.js  update_starred.js
src/: config.py  create_table.js  fetch_stars.js  main.py  manage_stars.py  style.css
