[project]
name = "starhub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27.2", "more-itertools>=10.5.0"]

[project.scripts]
manage-stars = "manage_stars:main"

[tool.uv]
package = true
# Resolve for macOS, but not for Linux or Windows.
environments = ["sys_platform == 'darwin'"]
